<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.tanker.notepad.ForgotPasswordActivity">

    <LinearLayout
        android:id="@+id/forgot_reset_password_link_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/reset_password_link_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/reset_password_link_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/reset_password_link"
                android:inputType="textUri"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/validate_link_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/reset_password_link_button"
            android:textStyle="bold"
            android:onClick="debugValidateResetLinkForm" />

        <Button
            android:id="@+id/forgot_password_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:background="@android:color/transparent"
            android:onClick="debugDisplayRequestResetPassword"
            android:text="@string/i_dont_have_a_reset_link_button"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@android:color/holo_blue_dark" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>