<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.tanker.notepad.ForgotPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/reset_password_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:labelFor="@+id/reset_password_input"
            android:text="@string/reset_password_label"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/reset_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/reset_password_confirmation_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:labelFor="@+id/reset_password_confirmation_input"
            android:text="@string/reset_password_confirmation_label"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/reset_password_confirmation_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <ProgressBar
            android:id="@+id/reset_password_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/reset_password_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/reset_password_button"
            android:textStyle="bold"
            android:onClick="onResetPassword" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>